--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.10.1",
     "react-collapsible": "^2.6.0",
     "react-dom": "^16.10.1",
+    "react-feather": "^2.0.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
