--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
     "redux": "^4.0.4",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "sweetalert2": "^8.18.0"
   },
   "scripts": {
